# find-dup-files

./: Cargo.toml  README.md
src/: error.rs  main.rs
tests/: test_main.rs
tests/fixtures/: i-measure-every-copy
