[package]
name = "find-dup-files"
version = "0.1.1"
authors = ["Eric Rochester <erochest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-verbosity-flag = "*"
confy = "*"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.2"
data-encoding = "2.2.0"
env_logger = "*"
log = "*"
ring = "0.17.0-alpha.1"
rusqlite = "0.21.0"
structopt = "*"
tempfile = "3.1.0"
walkdir = "2.3.1"

[dev-dependencies]
assert_cmd = "*"
# assert_fs = "*"
# dir-diff = "*"
# duct = "*"
# predicates = "*"
# rexpect = "*"
spectral = "*"
# tempfile = "3.1.0"
